# DIVINA-Backend

./: .gitignore  pyproject.toml
app/: __init__.py
app/models/: books.py  coupon.py  store.py
app/routes/: coupon.py  identify.py  store.py  weather.py
app/utils/: popularity.py
